<resources>
    <string name="app_name">CLEFER</string>
    <string name="jgrp">Christian Malik</string>
    <string name="app_full_name">Corn Leaf Disease Analyze</string>
    <string name="sign_in_main_headline">Masuk ke Akun Anda</string>
    <string name="sign_in_secondary_headline">Silahkan masukkan detail Anda.</string>
    <string name="title_email">Email</string>
    <string name="hint_input_email">Masukkan Alamat Email..</string>
    <string name="hint_input_password">Masukkan Kata Sandi...</string>
    <string name="title_password">Kata Sandi</string>
    <string name="title_sign_in">Masuk</string>
    <string name="sign_in_sub_headline_1">Belum punya akun? </string>
    <string name="sign_in_sub_headline_2"> Daftar Sekarang</string>
    <string name="title_register">Daftar</string>
    <string name="register_sub_headline_1">Sudah punya akun?</string>
    <string name="register_sub_headline_2">Masuk Sekarang</string>
    <string name="title_create_account">Buat Akun</string>
    <string name="title_first_name">Nama Depan</string>
    <string name="hint_input_first_name">Masukkan Nama Depan...</string>
    <string name="hint_input_last_name">Masukkan Nama Belakang...</string>
    <string name="title_last_name">Nama Belakang</string>
    <string name="hint_input_username">Masukkan Nama Pengguna...</string>
    <string name="title_username">Nama Pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_greetings">Selamat Datang</string>
    <string name="logout_title">Keluar</string>
    <string name="data_pengguna_title">Data Pengguna</string>
    <string name="tentang_aplikasi_title">Tentang Aplikasi</string>
    <string name="title_artikel">Artikel</string>
    <string name="detail_artikel_title">Detail Artikel</string>
    <string name="sub_headline_or">Atau lanjutkan dengan</string>
    <string name="title_image_result">📸 Hasil Gambar Anda</string>
    <string name="desc_image_result">Periksa kembali foto daun jagung yang Anda ambil untuk memastikan sudah sesuai dengan panduan yang disarankan. Pastikan gambar jelas, fokus, dan menunjukkan gejala penyakit dengan baik.</string>
    <string name="title_your_image_result">Hasil Gambar Anda</string>
    <string name="title_start_analyze">Mulai Analisis</string>
    <string name="title_article">Artikel</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_save_article">📑 Bookmarks Artikel CLEFER</string>
    <string name="desc_save_article">Selamat datang di halaman Penanda Artikel! Di sini, Anda dapat melihat semua artikel yang telah Anda tandai sebagai favorit terkait penyakit daun jagung.</string>
    <string name="judul_artikel">Judul Artikel :</string>
    <string name="save_article">Bookmarks</string>
    <string name="title_about_app">Tentang Aplikasi</string>
    <string name="simpan">Simpan</string>
    <string name="update_profile">Data Pengguna</string>
    <string name="title_community">👋 Halo Komunitas CLEFER!</string>
    <string name="desc_community">"Selamat datang di ruang tanya jawab kami! Di sini, Anda dapat berbagi pengetahuan, mengajukan pertanyaan, dan menemukan solusi untuk berbagai masalah terkait penyakit daun jagung. "</string>
    <string name="ajukan_post">Ajukan Pertanyaan</string>
    <string name="title_question">Judul</string>
    <string name="hint_input_title_question">Masukkan Judul</string>
    <string name="hint_input_description_question">Masukkan Deskripsi</string>
    <string name="title_description_question">Deskripsi</string>
    <string name="title_history_scan">📜 Riwayat Pemindaian CLEFER</string>
    <string name="desc_history">Selamat datang di halaman Riwayat Pemindaian! Di sini, Anda dapat melihat semua pemindaian yang telah Anda lakukan dan hasil analisis terkait penyakit daun jagung.</string>
    <string name="community">Komunitas</string>
    <string name="question">Ajukan Pertanyaan</string>
    <string name="comment_detail">Komentar</string>
    <string name="disease_analyze">Disease Analyze</string>
    <string name="corn_leaf">Corn Leaf</string>
    <string name="mulai_pemindaian_tanaman_anda">Mulai Pemindaian Tanaman Anda</string>
    <string name="pilihan_lanjutan">Pilihan Lanjutan</string>
    <string name="temukan_informasi_terbaru">Temukan Informasi Terbaru</string>
    <string name="btn_update_profile">Ganti Foto Profile</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="tulis_komentar">Tulis Komentar</string>
    <string name="komentar_postingan">Komentar Postingan</string>
    <string name="about">Selamat datang di aplikasi CLEFER - Analisis Penyakit Daun Jagung. CLEFER adalah solusi inovatif yang mengintegrasikan teknologi untuk mendeteksi dan menganalisis penyakit pada tanaman jagung secara cepat dan akurat. Aplikasi ini dirancang oleh tim ahli kami di bidang pertanian dan teknologi untuk memberikan kemudahan dalam mengidentifikasi serta mengelola penyakit tanaman jagung. Dengan CLEFER, Anda dapat melakukan:</string>
    <string name="about_2">1. Pemindaian Penyakit: Mendeteksi penyakit pada tanaman jagung melalui pemindaian visual menggunakan kamera ponsel Anda.\n2. Analisis Detail: Menganalisis gejala penyakit secara rinci dan mendapatkan rekomendasi perawatan yang tepat.\n3. Riwayat Pemindaian: Melacak riwayat pemindaian penyakit untuk memantau perkembangan dan memperbaiki kondisi tanaman Anda.\n4. Komunitas: Bergabung dengan komunitas petani dan pakar pertanian untuk berbagi pengalaman dan pengetahuan.</string>
    <string name="about_3">CLEFER didukung oleh teknologi canggih untuk memastikan keakuratan dan kehandalan dalam analisis penyakit tanaman jagung. Kami berkomitmen untuk memberikan solusi yang dapat meningkatkan produktivitas pertanian Anda.</string>
    <string name="like_text">Suka</string>
    <string name="comment_text">Komentar</string>
    <string name="title_result">Hasil</string>
    <string name="title_recommendation">Rekomendasi</string>
    <string name="title_history">Riwayat</string>
    <string name="hint_input_name">Masukkan nama lengkap anda...</string>
    <string name="title_name">Nama</string>
    <string name="title_empty_data">Data kosong</string>
    <string name="title_processing_image">Sedang memproses gambar ...</string>
    <string name="title_no_posted_articles">Belum ada postingan Artikel</string>
    <string name="title_empty_favorite_articles">Belum ada favorit artikel</string>
    <string name="title_empty_history_analyzed">Belum ada riwayat pemindaian</string>
</resources>