<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.profile.UpdateProfileActivity"
    tools:ignore="VisualLintTextFieldSize">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mToolbar"
        style="@style/ToolbarTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/data_pengguna_title"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shimmer_profile"
        android:visibility="invisible"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@color/shimmerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mToolbar"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            tools:ignore="ImageContrastCheck" />
    </com.facebook.shimmer.ShimmerFrameLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="34dp"
        android:scaleType="centerCrop"
        android:background="@color/shimmerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/edit_profile_text"
        style="@style/SemiBoldSubHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/btn_update_profile"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@color/cleferGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_text" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_text"
                style="@style/BoldHeadlineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/informasi_akun"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.jimbonlemu.clefer.components.CustomViewEditText
                android:id="@+id/edt_user_name"
                style="@style/DefinedEditTextLayoutSize"
                android:layout_marginTop="6dp"
                app:hintText="@string/hint_input_name"
                app:labelText="@string/title_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_text" />

            <com.jimbonlemu.clefer.components.CustomViewEditText
                android:id="@+id/edt_username"
                style="@style/DefinedEditTextLayoutSize"
                android:layout_marginTop="6dp"
                app:hintText="@string/hint_input_username"
                app:labelText="@string/title_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

            <com.jimbonlemu.clefer.components.CustomViewEditText
                android:id="@+id/edt_email"
                style="@style/DefinedEditTextLayoutSize"
                android:layout_marginTop="8dp"
                app:hintText="@string/hint_input_email"
                app:labelText="@string/title_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_profile"
                style="@style/ButtonStyle"
                android:layout_marginTop="28dp"
                android:text="@string/simpan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>