<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.community.QuestionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mToolbar"
        style="@style/ToolbarTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Ajukan Pertanyaan"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <TextView
        android:id="@+id/profile_text"
        style="@style/BoldHeadlineStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:text="Formulir Pertanyaan"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar" />

    <com.jimbonlemu.clefer.components.CustomViewEditText
        android:id="@+id/edt_title"
        style="@style/DefinedEditTextLayoutSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:hintText="@string/hint_input_title_question"
        app:labelText="@string/title_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_text" />

    <com.jimbonlemu.clefer.components.CustomViewEditText
        android:id="@+id/edt_description"
        style="@style/DefinedEditTextLayoutSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="400dp"
        app:hintText="@string/hint_input_description_question"
        app:labelText="@string/title_description_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_post"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="38dp"
        android:text="@string/ajukan_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
