<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.navbar.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/clefer"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jgrp"
        style="@style/MediumHeadline"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emailnya tuanku"
        style="@style/MediumHeadline"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_pengguna_title"
        style="@style/SemiBoldSubHeadline"
        android:backgroundTint="@color/cleferLightGreen"
        android:textColor="@color/cleferGreen"
        android:drawableLeft="@drawable/ic_profile"
        android:drawableRight="@drawable/arrow_next"
        android:drawableTint="@color/cleferGreen"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="22dp"
        android:padding="16dp"
        android:gravity="start|center_vertical"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_info_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tentang_aplikasi_title"
        android:layout_marginHorizontal="22dp"
        style="@style/SemiBoldSubHeadline"
        android:backgroundTint="@color/cleferLightGreen"
        android:textColor="@color/cleferGreen"
        android:drawableLeft="@drawable/ic_info_app"
        android:drawableRight="@drawable/arrow_next"
        android:drawableTint="@color/cleferGreen"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:gravity="start|center_vertical"
        app:cornerRadius="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_update_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/ButtonStyle"
        android:layout_marginTop="90dp"
        android:text="@string/logout_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_info_app" />

</androidx.constraintlayout.widget.ConstraintLayout>
