<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.dashboard.PreviewImageActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mToolbar"
        style="@style/ToolbarTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Periksa Gambar"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="23dp"
        app:cardBackgroundColor="@color/cleferCardBackgroundColor"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/ToolbarTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                android:text="@string/title_image_result"
                android:textSize="20sp" />

            <TextView
                style="@style/RegularSubHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="15dp"
                android:text="@string/desc_image_result"
                android:textColor="@color/black" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_headline_1"
        style="@style/ToolbarTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_your_image_result"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_desc" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_prev_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="23dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_headline_1"
        app:strokeColor="@android:color/transparent">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@tools:sample/backgrounds/scenic" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        style="@style/ButtonStyle"
        android:layout_marginEnd="40dp"
        android:text="@string/title_start_analyze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_prev_image" />


</androidx.constraintlayout.widget.ConstraintLayout>